Backport all changes to last java 8 line